# quantitative-trading-system

./: .gitignore  CMakeLists.txt  README.md
include/: common_types.h  config.h  connectivity_layer.h  execution_management_system.h  market_data_handler.h  order_management_system.h  risk_management.h  strategy_engine.h
src/: connectivity_layer.cpp  execution_management_system.cpp  main.cpp  market_data_handler.cpp  order_management_system.cpp  risk_management.cpp  strategy_engine.cpp
